# imbed

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/imbed/: base.html  data_prep.html  imbed_project.html  imbed_types.html  oa_batch_embeddings.html  segmentation_util.html  tools.html  util.html
_sources/: table_of_contents.rst.txt
_sources/module_docs/: imbed.rst.txt
docsrc/: index.rst
imbed/: __init__.py  base.py  data_prep.py  http_cosmo_prep_wip.ipynb  imbed_project.py  imbed_types.py  oa_batch_embeddings.py  segmentation.py  segmentation_util.py  stores_util.py  tools.py  util.py  vector_db.py  vectorization.py
imbed/components/: README.md  __init__.py  clusterization.py  components_util.py  planarization.py  segmentation.py  standard_components.pickle  vectorization.py
imbed/examples/: __init__.py  batch_embeddings_examples.py  imbed_box_01.py  imbed_dog.py
imbed/mdat/: __init__.py  arxiv.py  lmsys_ai_conversations.py
imbed/tests/: __init__.py  test_imbed_project.py  test_segmentation.py  test_typical_functionality.py  utils_for_tests.py
misc/: ai_prompts.ipynb  arxiv_articles.ipynb  imbed_boxes.ipynb  imbed_pipeline_wip.ipynb  imbed_projects.ipynb  imbed_tool_inventory.md  imbed_vector_mining.ipynb  imbed_wip.ipynb  openai_embeddings.ipynb  recent_fixes.md  temp_data.jsonl  test_imbed_wip.ipynb
module_docs/: imbed.html
tests/: __init__.py  test_components.py
(+62 files in other folders)
